# databasecli

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  PRIVACY-POLICY.md  README.md  dist-workspace.toml  justfile  squirrel.toml
crates/databasecli-cli/: Cargo.toml
crates/databasecli-cli/src/: args.rs  main.rs  run.rs
crates/databasecli-cli/wix/: main.wxs
crates/databasecli-core/: Cargo.toml
crates/databasecli-core/src/: config.rs  connection.rs  error.rs  health.rs  help.rs  init.rs  lib.rs
crates/databasecli-core/src/commands/: analyze.rs  compare.rs  erd.rs  health.rs  list_databases.rs  mod.rs  query.rs  sample.rs  schema.rs  summary.rs  trend.rs
crates/databasecli-mcp/: Cargo.toml
crates/databasecli-mcp/src/: json_convert.rs  main.rs  server.rs  state.rs
crates/databasecli-mcp/src/tools/: analysis.rs  connection.rs  migration.rs  mod.rs  query.rs  schema.rs
crates/databasecli-mcp/wix/: main.wxs
crates/databasecli-tui/: Cargo.toml
crates/databasecli-tui/src/: app.rs  event.rs  lib.rs  ui.rs
crates/databasecli-tui/src/event/: connect.rs  home.rs  input.rs  mod.rs
crates/databasecli-tui/src/ui/: analyze.rs  compare.rs  connect.rs  create_config.rs  databases.rs  erd.rs  health.rs  help.rs  home.rs  init.rs  mod.rs  query.rs  sample.rs  schema.rs  summary.rs  trend.rs
docs/: CNAME  database.md  index.html  initial.md  mcp.md  robots.txt  sitemap.xml  style.css
scripts/: release.py
