[package]
name = "databasecli"
description = "PostgreSQL database connection manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "databasecli"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
databasecli-core = { path = "../databasecli-core" }
databasecli-tui = { path = "../databasecli-tui" }

[package.metadata.wix]
upgrade-guid = "B8E6A4F2-3D1C-4E5A-9F7B-2C8D0E1F3A5B"
path-guid = "D4C7E9A1-6B3F-4D2E-8A1C-5F0B7E3D9C2A"
license = false
eula = false
