[package]
name = "databasecli-core"
description = "Core domain logic for databasecli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chrono = "0.4"
configparser = "3"
home = "0.5"
postgres = { version = "0.19", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
serde_json = "1"
thiserror = "2"
uuid = "1"

[dev-dependencies]
tempfile = "3"
