[package]
name = "databasecli-mcp"
description = "MCP server for databasecli — AI agent gateway to PostgreSQL"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "databasecli-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
databasecli-core = { path = "../databasecli-core" }
rmcp = { version = "1.2", features = ["server", "macros", "schemars", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
