[package]
name = "databasecli-tui"
description = "Interactive TUI for databasecli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
crossterm = "0.28"
ratatui = "0.29"
databasecli-core = { path = "../databasecli-core" }
